    the bagof/3 and setof/3 built-in methods where the meta-argument contains
    multiple existentially qualified variables.

    Removed support for the deprecated "startup_message" flag flags/1 value.

    Allow open lists of terminals in the body of grammar rules.

    Added (+)/1, min/2, max/2, acos/1, and asin/1 to the list of ISO Prolog
    built-in functions used by the portability flag.

    Added an example, "patching", of using complementing categories to patch
    broken predicate declarations and predicate definitions of complemented
    classes and prototypes.

    Added an example of combining constraints defined in different objects
    to the "chr" example based on sample code posted by Gergö Barany on the
    SWI-Prolog mailing list.

    Added syntax coloring support for the min/2, max/2, acos/1, and asin/1
    functions to all supported text editors and syntax highlighters.

    Updated the support for Exuberant ctags. Declared predicates are now
    listed using the Functor/Arity notation.

    Updated the Vim syntax file for Logtalk, applying a patch contributed
    by Thilo Six.


2.43.3 - December 21, 2011

    Changed the compiler to take into account the uses/2 directive when
    compiling calls to the reflection built-in methods. This change extends
    the semantics of the uses/2 directive and allows easier migration from
    plain Prolog applications to Logtalk.

    Updated the implementation of the predicate_property/2 built-in method,
    adding a scope/1 property.

    Updated the Logtalk compiler to add information about a source file name,
    source file directory, and source file compiler options to the generated
    Prolog files. In previous versions, this information was registered only
    when loading a source file. The changes simplify building applications
    where Logtalk libraries are pre-compiled and pre-loaded.

    Updated the Logtalk compiler to print the name of the hook object used in