@@ -164,6 +164,7 @@ stream_property
 sub_atom
 synchronized
 term_expansion
+term_variables
 this
 threaded
 threaded_call
