@@ -39,7 +39,8 @@ RELEASE NOTES
     Allow open lists of terminals in the body of grammar rules.
 
     Added (+)/1, min/2, max/2, acos/1, and asin/1 to the list of ISO Prolog
-    built-in functions used by the portability flag.
+    built-in functions used by the portability flag. Added term_variables/2
+    to the list of ISO Prolog built-in predicates.
 
     Added an example, "patching", of using complementing categories to patch
     broken predicate declarations and predicate definitions of complemented
@@ -50,7 +51,8 @@ RELEASE NOTES
     SWI-Prolog mailing list.
 
     Added syntax coloring support for the min/2, max/2, acos/1, and asin/1
-    functions to all supported text editors and syntax highlighters.
+    functions and the term_variables/2 predicate to all supported text
+    editors and syntax highlighters.
 
     Updated the support for Exuberant ctags. Declared predicates are now
     listed using the Functor/Arity notation.
